<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- LOGO -->
            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:contentDescription="@string/logo_desc"
                android:scaleType="fitCenter"
                android:src="@drawable/signiai_logo" />


            <!-- LOGIN -->
            <LinearLayout
                android:id="@+id/loginLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- USERNAME -->
                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:autofillHints="emailAddress"
                    android:background="@android:drawable/edit_text"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:textColor="@color/text_primary"
                    android:textColorHint="@android:color/darker_gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tvEmailError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/incorrect_email"
                    android:textColor="@color/text_error"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <!-- PASSWORD -->
                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:autofillHints="password"
                    android:background="@android:drawable/edit_text"
                    android:padding="12dp"
                    android:textColor="@color/text_primary"
                    android:textColorHint="@android:color/darker_gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:drawableEnd="@drawable/ic_eye"/>

                <TextView
                    android:id="@+id/tvPassError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/incorrect_password"
                    android:textColor="@color/text_error"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <!-- LOGIN BUTTON -->
                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/Login"
                    android:backgroundTint="#1E5FD8"
                    android:textColor="@android:color/white" />

                <!-- OR DIVIDER -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="24dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/or" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="8dp"
                        android:text="@string/or"
                        android:textColor="@color/text_primary"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/or" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvForgot"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="12dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/forgot_password"
                    android:textColor="@android:color/holo_blue_dark" />


                <TextView
                    android:id="@+id/tvToSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="33dp"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:text="@string/don_t_have_an_account_sign_up"
                    android:textColor="@android:color/holo_blue_dark" />
                <Button
                    android:id="@+id/btnGoogleLogin"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/continue_with_google"
                    android:layout_marginTop="12dp"
                    android:backgroundTint="#FFFFFF"
                    android:textColor="#000000"/>

            </LinearLayout>

            <!-- ================= RESET PASSWORD ================= -->
            <LinearLayout
                android:id="@+id/resetLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="12dp"
                    android:text="@string/forgot_title"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:text="@string/enter_your_email_address" />

                <EditText
                    android:id="@+id/etResetEmail"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="12dp"
                    android:autofillHints="emailAddress"
                    android:background="@color/input_bg"
                    android:hint="@string/enter_email_id"
                    android:inputType="textEmailAddress"
                    android:padding="12dp" />

                <Button
                    android:id="@+id/btnReset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/send_reset_link" />

            </LinearLayout>

            <!-- ================= SIGNUP ================= -->
            <LinearLayout
                android:id="@+id/signupLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <!-- SIGNUP TITLE -->
                <TextView
                    android:id="@+id/tvSignupTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="6dp"
                    android:text="@string/signup"
                    android:textColor="@color/_000000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvSignupSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:text="@string/create_your_account"
                    android:textColor="@color/_000000"
                    android:textSize="14sp"
                    android:visibility="gone" />


                <EditText
                    android:id="@+id/etSignupName"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="12dp"
                    android:autofillHints="name"
                    android:background="@color/input_bg"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:padding="12dp" />

                <EditText
                    android:id="@+id/etSignupUsername"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="12dp"
                    android:autofillHints="username"
                    android:background="@color/input_bg"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:padding="12dp" />

                <EditText
                    android:id="@+id/etSignupEmail"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="12dp"
                    android:autofillHints="emailAddress"
                    android:background="@color/input_bg"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress"
                    android:padding="12dp" />

                <EditText
                    android:id="@+id/etSignupPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="12dp"
                    android:autofillHints="password"
                    android:background="@color/input_bg"
                    android:drawableEnd="@drawable/ic_eye"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/create_password"
                    android:inputType="textPassword"
                    android:padding="12dp" />

                <EditText
                    android:id="@+id/etSignupConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="12dp"
                    android:autofillHints="password"
                    android:background="@color/input_bg"
                    android:drawableEnd="@drawable/ic_eye"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="12dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:text="@string/user_type"
                    android:textStyle="bold" />
                <Spinner
                    android:id="@+id/spUserType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"/>

                <Button
                    android:id="@+id/btnSignup"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:backgroundTint="#1E5FD8"
                    android:text="@string/done"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text" />

                <TextView
                    android:id="@+id/tvBackToLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    android:text="@string/already_have_an_account_login"
                    android:textColor="@android:color/holo_blue_dark" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>